--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -23,11 +23,10 @@
                     <a routerLink="/storico" routerLinkActive="routerActive"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-
             <ul class="nav navbar-nav navbar-right">
-                <li><a href=""><b>Account</b></a></li>
+                <li><a routerLink="/cambiopassword"><b>Account</b></a></li>
                 <li><a href=""><b>ESCI</b></a></li>
             </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
     </div>
 </nav>
