Aggiunto titolo in cambia password... Impostato colore background del form in accordo con diagnostica e storico

--- a/src/app/cambia-password/cambia-password.component.css
+++ b/src/app/cambia-password/cambia-password.component.css
@@ -12,7 +12,7 @@ nav{
 }
 
 .form{
-    position: absolute;
+  position: absolute;
   margin: auto;
   top: 0;
   right: 0;
@@ -20,7 +20,7 @@ nav{
   left: 0;
   width: 600px;
   height: 600px;
-  background-color: #cac7d7;
+  background-color: whitesmoke;
   border-radius: 3px;
 }
 
@@ -40,4 +40,13 @@ nav{
 
 button{
     margin-left: 15px;
+}
+
+.textClass{
+  font-family: 'Open Sans', sans-serif;
+  color: black;
+  /*text-shadow: 10px 3px 9px black;*/
+  font-size: 40px;
+  text-align: center;
+  margin-top: 5%;
 }
