--- a/src/app/cambia-password/cambia-password.component.html
+++ b/src/app/cambia-password/cambia-password.component.html
@@ -21,7 +21,7 @@
     <app-nav-bar></app-nav-bar>
 
     <div id="form" class="form">
-
+      <p class="textClass">Gestione Account</p>
         <div class="allForm">
 
 
