--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,52 +1,60 @@
 
-<div style="overflow: hidden">
-  <div class="loggedin-div" id="user_div">
-    <object>
-      <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
-    </object>
-  <h3>Benvenuto</h3>
-    <!--<button (click)="showRouter()" routerLink="uninacorse">Mostra BOX</button>-->
-    <button class="myButton myHover" mat-raised-button color="primary" (click)="showRouter()" routerLink="uninacorse">Mostra BOX</button>
-    <button class="myButton myHover" mat-raised-button color="primary" (click)="showRouter()" routerLink="storico">Storico</button>
-    <button class="myButton myHover" mat-raised-button color="primary" (click)="showRouter()" routerLink="cambiopassword">Cambia password</button>
-    <button class="myButton myHover" mat-raised-button color="primary" (click)="logout()" >Logout</button>
-    <!--<button (click)="showRouter()" routerLink="storico">Storico</button>
-    <button (click)="showRouter()" routerLink="cambiopassword">Cambia password</button> 
-    <button (click)="logout()">Logout</button>-->
-  </div>
 
 
+<html>
+  <body>
 
-  <div #showLogin class="loggedin-div"  id="login_div">
-    <object>
-      <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
-  </object>
-    <h3>Effettua login</h3>
-    <!-- <input type="text" id="username" placeholder="Email">-->
-    <p>
-      <mat-form-field appearance="legacy">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" [formControl]="email" [disabled]="emailDisabled">
-        <mat-icon matSuffix>email</mat-icon>
-      </mat-form-field>
-    </p>
-    <!--<input type="password" id="password" placeholder="Password">-->
-    <p>
-      <mat-form-field appearance="legacy">
-        <mat-label>Password</mat-label>
-        <input matInput [type]="hideNewPassword ? 'password' : 'text'" placeholder="Password" [formControl]="password" required>
-        <button mat-icon-button matSuffix (click)="hideNewPassword = !hideNewPassword"
-        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideNewPassword">
-        <mat-icon>{{hideNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
-    </p>
-    <!--<button (click)="myLogin()">Login</button>-->
-   <button class="myButton myHover" mat-raised-button color="primary" (click)="myLogin()" [disabled]="loginButtonDisabled">Login</button>
+    <div style="overflow: hidden">
+      <div class="loggedin-div" id="user_div">
+        <object>
+          <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
+        </object>
+      <h3 class="loginHeader">Bentornato</h3>
+        <!--<button (click)="showRouter()" routerLink="uninacorse">Mostra BOX</button>-->
+        <button class="myButton myHover" mat-raised-button color="primary" (click)="showRouter()" routerLink="uninacorse">Mostra BOX</button>
+        <button class="myButton myHover" mat-raised-button color="primary" (click)="showRouter()" routerLink="storico">Storico</button>
+        <button class="myButton myHover" mat-raised-button color="primary" (click)="showRouter()" routerLink="cambiopassword">Cambia password</button>
+        <button class="myButton myHover" mat-raised-button color="primary" (click)="logout()" >Logout</button>
+        <!--<button (click)="showRouter()" routerLink="storico">Storico</button>
+        <button (click)="showRouter()" routerLink="cambiopassword">Cambia password</button> 
+        <button (click)="logout()">Logout</button>-->
+      </div>
+    
+    
+    
+      <div #showLogin class="loggedin-div"  id="login_div">
+        <object>
+          <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
+      </object>
+        <h3 class="loginHeader">Autenticazione</h3>
+        <!-- <input type="text" id="username" placeholder="Email">-->
+        <p>
+          <mat-form-field appearance="legacy">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Email" [formControl]="email" [disabled]="emailDisabled">
+            <mat-icon matSuffix>email</mat-icon>
+          </mat-form-field>
+        </p>
+        <!--<input type="password" id="password" placeholder="Password">-->
+        <p>
+          <mat-form-field appearance="legacy">
+            <mat-label>Password</mat-label>
+            <input matInput [type]="hideNewPassword ? 'password' : 'text'" placeholder="Password" [formControl]="password" required>
+            <button mat-icon-button matSuffix (click)="hideNewPassword = !hideNewPassword"
+            [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideNewPassword">
+            <mat-icon>{{hideNewPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
+        </p>
+        <!--<button (click)="myLogin()">Login</button>-->
+       <button id="loginButton" class="myButton" mat-raised-button color="primary" (click)="myLogin()" [disabled]="loginButtonDisabled">Login</button>
+    
+      </div>
+    
+      <div id="router">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
 
-  </div>
-
-  <div id="router">
-    <router-outlet></router-outlet>
-  </div>
-</div>
+  </body>
+</html>
