Aggiunti MatDialog in Cambio-password + altro... Rimosso dialog-test component Puliti alcuni file css di Stato Generale Migliorati alcuni effetti grafici dello storico in cambio-password.ts rimosso metodo Back sostituito con routerLink Altri bug Minori

--- a/src/app/cambia-password/cambia-password.component.html
+++ b/src/app/cambia-password/cambia-password.component.html
@@ -61,7 +61,7 @@
             <div class="singleForm">
 
                 <p>
-                    <button mat-raised-button (click)="goBack()">Annulla</button>
+                    <button mat-raised-button routerLink="/login">Annulla</button>
                     <button mat-raised-button color="primary" [disabled]="confirmButtonDisabled"
                         (click)="updatePassword()">Salva modifiche</button>
                 </p>
