--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -19,98 +19,98 @@
 
 <body class="bodyStorico">
 
-    <app-nav-bar></app-nav-bar>
+<!--    <app-nav-bar></app-nav-bar>-->
 
-    <div class="overlay" id="loader">
-        <div class="overlay__inner">
-            <div class="overlay__content"><span class="spinner"></span></div>
-        </div>
-    </div>
+<!--    <div class="overlay" id="loader">-->
+<!--        <div class="overlay__inner">-->
+<!--            <div class="overlay__content"><span class="spinner"></span></div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="load" id="topText">
-
-
-
-    </div>
-
-    <div class="row" id="rowListaID">
-
-        <div class="col scrollable">
-
-          
-
-                <div id="box" class="box">
-                    <h2 id="titleBox">Seleziona ID sensori</h2>
-                    <ul id="listaDate">
-                    </ul>
-                </div>
-
-
-        </div>
-
-    </div>
+<!--    <div class="load" id="topText">-->
 
 
 
-    <div class="row" id="rowFiltri" style=" padding: 10px; margin-top: 15px;" id="filtraggio">
+<!--    </div>-->
 
-        <div class="rowFiltri">
+<!--    <div class="row" id="rowListaID">-->
 
-            <h2 class="text-center">Filtraggio grafici</h2>
+<!--        <div class="col scrollable">-->
 
-            <div class="col" id="filtri">
+<!--          -->
 
-
-                <div id="Aggiorna tempo">
-                    <label class="dataPickerInput">Scegli giorno</label>
-                    <!--<input type="date" id="giornoInizioGenerale"> -->
-                    <mat-form-field class="labelStyle">
-                        <mat-label class="labelStyle">Scegli giorno</mat-label>
-                        <input matInput #dateInput [matDatepicker]="picker" id="test" class="dataPickerInput">
-                        <mat-datepicker-toggle matSuffix [for]="picker" class="dataPickerInput"></mat-datepicker-toggle>
-                        <mat-datepicker #picker class="dataPickerInput"></mat-datepicker>
-                    </mat-form-field>
+<!--                <div id="box" class="box">-->
+<!--                    <h2 id="titleBox">Seleziona ID sensori</h2>-->
+<!--                    <ul id="listaDate">-->
+<!--                    </ul>-->
+<!--                </div>-->
 
 
+<!--        </div>-->
 
-                    <label class="labelStyle">Scegli ora inizio:</label><input type="time" id="oraInizioGenerale"
-                        step="2" />
-                    <label class="labelStyle">Scegli ora fine:</label> <input type="time" id="oraFineGenerale"
-                        step="2" />
-                </div>
-
-                <div id="idPerPlot" class="idGenerali">
-                    <label class="labelStyle">Seleziona ID su grafico generale</label>
-                    <ul id="idPlot" class="idPlot"></ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
+<!--    </div>-->
 
 
-    <div class="row" id="rowButtons">
 
-        <div class="button_div">
-            <button mat-raised-button color="primary" id="btnCaricaDate" (click)="getID()">Mostra ID </button>
-            <button mat-raised-button color="primary" id="btnAvanti" (click)="aggiungiID()">Conferma selezione</button>
-            <button mat-raised-button color="primary" id="btnJson" (click)="startHighChart()">Mostra grafici
-                sensori</button>
-            <button mat-raised-button color="primary" id="btnConfermaID" (click)="startHighChartGen()">Mostra grafico
-                generale</button>
-        </div>
+<!--    <div class="row" id="rowFiltri" style=" padding: 10px; margin-top: 15px;" id="filtraggio">-->
 
-    </div>
+<!--        <div class="rowFiltri">-->
 
-    <div class="row" id="rowGrafici">
-        <div class="col-md-12" id="grafici">
-        </div>
-    </div>
+<!--            <h2 class="text-center">Filtraggio grafici</h2>-->
+
+<!--            <div class="col" id="filtri">-->
 
 
-    <div class="row" style="padding-top: 450px; margin-top: 299px;">
-        <app-footer id="footer" class="footer"></app-footer>
-    </div>
+<!--                <div id="Aggiorna tempo">-->
+<!--                    <label class="dataPickerInput">Scegli giorno</label>-->
+<!--                    &lt;!&ndash;<input type="date" id="giornoInizioGenerale"> &ndash;&gt;-->
+<!--                    <mat-form-field class="labelStyle">-->
+<!--                        <mat-label class="labelStyle">Scegli giorno</mat-label>-->
+<!--                        <input matInput #dateInput [matDatepicker]="picker" id="test" class="dataPickerInput">-->
+<!--                        <mat-datepicker-toggle matSuffix [for]="picker" class="dataPickerInput"></mat-datepicker-toggle>-->
+<!--                        <mat-datepicker #picker class="dataPickerInput"></mat-datepicker>-->
+<!--                    </mat-form-field>-->
+
+
+
+<!--                    <label class="labelStyle">Scegli ora inizio:</label><input type="time" id="oraInizioGenerale"-->
+<!--                        step="2" />-->
+<!--                    <label class="labelStyle">Scegli ora fine:</label> <input type="time" id="oraFineGenerale"-->
+<!--                        step="2" />-->
+<!--                </div>-->
+
+<!--                <div id="idPerPlot" class="idGenerali">-->
+<!--                    <label class="labelStyle">Seleziona ID su grafico generale</label>-->
+<!--                    <ul id="idPlot" class="idPlot"></ul>-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--        </div>-->
+<!--    </div>-->
+
+
+<!--    <div class="row" id="rowButtons">-->
+
+<!--        <div class="button_div">-->
+<!--            <button mat-raised-button color="primary" id="btnCaricaDate" (click)="getID()">Mostra ID </button>-->
+<!--            <button mat-raised-button color="primary" id="btnAvanti" (click)="aggiungiID()">Conferma selezione</button>-->
+<!--            <button mat-raised-button color="primary" id="btnJson" (click)="startHighChart()">Mostra grafici-->
+<!--                sensori</button>-->
+<!--            <button mat-raised-button color="primary" id="btnConfermaID" (click)="startHighChartGen()">Mostra grafico-->
+<!--                generale</button>-->
+<!--        </div>-->
+
+<!--    </div>-->
+
+<!--    <div class="row" id="rowGrafici">-->
+<!--        <div class="col-md-12" id="grafici">-->
+<!--        </div>-->
+<!--    </div>-->
+
+
+<!--    <div class="row" style="padding-top: 450px; margin-top: 299px;">-->
+<!--        <app-footer id="footer" class="footer"></app-footer>-->
+<!--    </div>-->
 
 
 
