--- a/src/app/gforce-section/gforce-section.component.css
+++ b/src/app/gforce-section/gforce-section.component.css
@@ -1,7 +1,7 @@
 
 .banner-font{
 
-    font-family: Impact;
+  font-family: Impact, sans-serif;
 
 }
 
@@ -11,61 +11,6 @@
 
 .sotto{
     position: absolute;
-}
-
-.btn.empty{
-
-    background-color: transparent;
-}
-
-.btn.empty:hover{
-    background-color: transparent;
-}
-
-
-
-.button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    border-radius: 50%;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
-
-    transition: background-color .3s;
-}
-
-.button:hover, .button:focus {
-    background-color: #27ae60;
-}
-
-.button.orange{
-    background-color: #e67e22;
-}
-
-
-.button.orange:hover, .button.orange:focus {
-    background-color: #d35400;
-}
-
-.button.red{
-    background-color: #e62222;
-}
-
-
-.button.red:hover, .button.red:focus {
-    background-color: #d30000;
-}
-
-.banner-font{
-
-    font-family: Impact;
-
 }
 
 
@@ -88,9 +33,6 @@
     transition: background-color .3s;
 }
 
-.btn:hover, .btn:focus {
-    background-color: #27ae60;
-}
 
 /*.btn > * {
     position: relative;
@@ -101,57 +43,34 @@
     padding: 5px 15px;
 }
 
-.btn:before {
-    content: "";
+/*.btn:before {*/
+/*    content: "";*/
 
-    /*position: absolute;*/
-    top: 50%;
-    left: 50%;
+/*    !*position: absolute;*!*/
+/*    top: 50%;*/
+/*    left: 50%;*/
 
-    display: block;
-    width: 0;
-    padding-top: 0;
+/*    display: block;*/
+/*    width: 0;*/
+/*    padding-top: 0;*/
 
-    border-radius: 100%;
+/*    border-radius: 100%;*/
 
-    background-color: rgba(236, 240, 241, .3);
+/*    background-color: rgba(236, 240, 241, .3);*/
 
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
+/*    -webkit-transform: translate(-50%, -50%);*/
+/*    -moz-transform: translate(-50%, -50%);*/
+/*    -ms-transform: translate(-50%, -50%);*/
+/*    -o-transform: translate(-50%, -50%);*/
+/*    transform: translate(-50%, -50%);*/
+/*}*/
 
-.btn:active:before {
-    width: 120%;
-    padding-top: 120%;
+/*.btn:active:before {*/
+/*    width: 120%;*/
+/*    padding-top: 120%;*/
 
-    transition: width .2s ease-out, padding-top .2s ease-out;
-}
-
-/* Styles, not important */
-*, *:before, *:after {
-    box-sizing: border-box;
-}
-
-
-
-.btn.orange {
-    background-color: #e67e22;
-}
-
-.btn.orange:hover, .btn.orange:focus {
-    background-color: #d35400;
-}
-
-.btn.red {
-    background-color: #e74c3c;
-}
-
-.btn.red:hover, .btn.red:focus {
-    background-color: #c0392b;
-}
+/*    transition: width .2s ease-out, padding-top .2s ease-out;*/
+/*}*/
 
 .spanBar{
     font-size: 30px;
