--- a/src/app/highchartstest/highchartstest.component.css
+++ b/src/app/highchartstest/highchartstest.component.css
@@ -11,6 +11,7 @@
     width: 60%;
     border: 3px solid whitesmoke;
     background-color: ghostwhite;
+    border-radius: 5px;
     padding: 10px;
     max-height: 680px;
     overflow: auto;
