--- a/src/app/visionemacchina/visionemacchina.component.css
+++ b/src/app/visionemacchina/visionemacchina.component.css
@@ -1,142 +1,95 @@
 
 
 .btn.empty{
-    
+
     background-color: transparent;
 }
 
-.btn.empty:hover{
+.btn.empty:hover, .btn.empty:focus{
   background-color: transparent;
 }
 
 
-
-.button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    border-radius: 50%;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
-    
-    transition: background-color .3s;
-  }
-  
-  .button:hover, .button:focus {
-    background-color: #27ae60;
-  }
-
-  .button.orange{
-    background-color: #e67e22;
-  }
-
-  
-  .button.orange:hover, .button.orange:focus {
-    background-color: #d35400;
-  }
-
-  .button.red{
-    background-color: #e62222;
-  }
-
-  
-  .button.red:hover, .button.red:focus {
-    background-color: #d30000;
-  }
-
-  .banner-font{
-
-    font-family: Impact;
-    
-}
-
- 
 .btn {
     position: relative;
-  
+
     display: block;
     margin: 0px auto;
     padding: 0;
-  
+
     overflow: hidden;
-  
+
     border-width: 0;
     outline: none;
     border-radius: 2px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
-    
+
     background-color: #2ecc71;
     color: #ecf0f1;
-    
+
     transition: background-color .3s;
   }
-  
+
   .btn:hover, .btn:focus {
-    background-color: #27ae60;
+    background-color: #2ecc71;
+    color: #ecf0f1;
   }
-  
+
   .btn > * {
     position: relative;
   }
-  
+
   .btn span {
     display: block;
     padding: 5px 15px;
   }
-  
+
   .btn:before {
     content: "";
-    
+
     position: absolute;
     top: 50%;
     left: 50%;
-    
+
     display: block;
     width: 0;
     padding-top: 0;
-      
+
     border-radius: 100%;
-    
+
     background-color: rgba(236, 240, 241, .3);
-    
+
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
   }
-  
+
   .btn:active:before {
     width: 120%;
     padding-top: 120%;
-    
+
     transition: width .2s ease-out, padding-top .2s ease-out;
   }
-  
+
   /* Styles, not important */
   *, *:before, *:after {
     box-sizing: border-box;
   }
-  
-  
-  
+
   .btn.orange {
     background-color: #e67e22;
   }
-  
+
   .btn.orange:hover, .btn.orange:focus {
     background-color: #d35400;
   }
-  
+
   .btn.red {
     background-color: #e74c3c;
   }
-  
+
   .btn.red:hover, .btn.red:focus {
     background-color: #c0392b;
   }
