Nuova immagine gForce, popUp in errore Login

--- a/src/app/gforce-section/gforce-section.component.html
+++ b/src/app/gforce-section/gforce-section.component.html
@@ -1,7 +1,7 @@
 <div class="col-sm-4" style="position: absolute; left: 60%">
     <h1 class="banner-font">Accelerazioni</h1>
     <img id="pointer" class="sotto" src="../../assets/img/pointer.png" alt="" width="188" height="188" [style.left]="x_axis" [style.bottom]="y_axis">
-    <img id="grafico" class="sopra" src="../../assets/img/Gforce.png" alt="" width="188" height="188">
+    <img id="grafico" class="sopra" src="../../assets/svg/Gforce.svg" alt="" width="188" height="188">
     <div style="position: absolute; left: 20px; top: 260px" >
         <button class="btn" type="button"><span class="spanBar">{{longitudinal |number:'1.2-2'}}</span>m/s<sup>2</sup></button>
         <button class="btn" type="button" style="left: 100px"><span class="spanBar">{{latDir}}{{lateral | number: '1.2-2'}}</span>m/s<sup>2</sup></button>
