Rimossi riferimenti auth inutili

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
         <p>
           <mat-form-field appearance="legacy">
             <mat-label>Email</mat-label>
-            <input matInput placeholder="Email" [formControl]="email" [disabled]="emailDisabled">
+            <input matInput placeholder="Email" [formControl]="nomeUtente" [disabled]="emailDisabled">
             <mat-icon matSuffix>email</mat-icon>
           </mat-form-field>
         </p>
