--- a/src/app/speedometer-section/speedometer-section.component.html
+++ b/src/app/speedometer-section/speedometer-section.component.html
@@ -1,7 +1,7 @@
 <div class="col-sm-4">
 
     <div id="speed" class="coll-sm-4">
-        <h1 class="banner-font">Speedometer</h1>
+        <h1 class="banner-font">Velocità Assoluta</h1>
         <canvas id="canvas"></canvas>
     </div>
 
