--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <div class="title">
-                <span>HighVoltage &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; LowVoltage</span>
+                <span>HighVoltage &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; LowVoltage</span>
             </div>
         </div>
     </div>
@@ -19,18 +19,6 @@
             <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV | number: '1.1-3'}}A</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{dataLV}}%</span></button>
         </div>
-       <!-- <div class="col-sm-5" style="margin-top: 10px">
-            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaHV}}°C</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV}}V</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV}}A</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{dataHV}}%</span></button>
-        </div>
-        <div class="col-sm-4" style="margin-top: 10px">
-            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaLV}}°C</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV}}V</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV}}A</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{dataLV}}%</span></button>
-        </div>-->
     </div>
     <div class="row">
         <div class="col-sm-5">
