--- a/src/app/diagnostica/diagnostica.component.css
+++ b/src/app/diagnostica/diagnostica.component.css
@@ -13,8 +13,9 @@
     background-color: ghostwhite;
     border-radius: 5px;
     padding: 10px;
-    max-height: 500px;
+    max-height: 650px;
     overflow: auto;
+    white-space: pre-wrap;
 }
 .textClass{
     font-family: 'Open Sans', sans-serif;
@@ -27,12 +28,21 @@
     width: 60%;
     padding: 10px;
 }
+.listNoValue{
+    font-size: 18px;
+    margin-left: 2%;
+}
 .button-container {
     display: flex;
     justify-content: center;
     width: 120px;
     margin-top: 2%;
     margin-left: 74%;
+}
+.clearButton {
+    position: absolute;
+    margin-left: -5%;
+    bottom: 1%;
 }
 .button-row {
     display: table-cell;
@@ -43,22 +53,50 @@
     margin: 8px 8px 8px 0;
 }
 
-.loading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
+/*Inizio loader*/
+
+.overlay {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 }
-.overlay{
-    height:100vh;
-    width:100%;
-    background-color:rgba(0, 0, 0, 0.286);
-    z-index:    10;
-    top:        0;
-    left:       0;
-    position:   fixed;
+
+.overlay__inner {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.overlay__content {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 
+.spinner {
+  width: 75px;
+  height: 75px;
+  display: inline-block;
+  border-width: 2px;
+  border-color: rgba(255, 255, 255, 0.05);
+  border-top-color: #fff;
+  animation: spin 1s infinite linear;
+  border-radius: 100%;
+  border-style: solid;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+
+
+}
+
+/*Fine loader*/
