Bug fix Diagnostica, Scelta grafici singoli e multipli... MatDialog è stato esteso in modo da essere ancora più modulabile, permette adesso di decidere in fase di chiamata quali e quanti pulsanti dovranno essere mostrati e che valori di ritorno avranno. Lo storico adesso permette di scegliere se mostrare i grafici singoli di ogni sensore o direttamente quello unito. In fase di progettazione la possibilità di filtrare i sensori nello storico una volta fatta la ricerca

--- a/src/app/diagnostica/diagnostica.component.html
+++ b/src/app/diagnostica/diagnostica.component.html
@@ -14,11 +14,11 @@
 
     <app-nav-bar></app-nav-bar>
 
-<!--    <div class="overlay" *ngIf="isLoading">-->
-<!--      <div class="overlay__inner">-->
-<!--        <div class="overlay__content"><span class="spinner"></span></div>-->
-<!--      </div>-->
-<!--    </div>-->
+    <div class="overlay" *ngIf="isLoading">
+      <div class="overlay__inner">
+        <div class="overlay__content"><span class="spinner"></span></div>
+      </div>
+    </div>
 
     <div class="txtCenter">
         <p class="textClass">Messaggi di Diagnostica</p>
