--- a/src/app/diagnostica/diagnostica.component.css
+++ b/src/app/diagnostica/diagnostica.component.css
@@ -61,6 +61,8 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.584);
 }
 
 .overlay__inner {
