Aggiunti test in appComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
         <p>
           <mat-form-field appearance="legacy">
             <mat-label>Username</mat-label>
-            <input matInput placeholder="Email" [formControl]="nomeUtente" [disabled]="emailDisabled">
+            <input id="inputEmail" matInput placeholder="Email" [formControl]="nomeUtente" [disabled]="emailDisabled">
             <mat-icon matSuffix>account_circle</mat-icon>
           </mat-form-field>
         </p>
