--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -24,8 +24,9 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li><a routerLink="/login"><b>Menu principale</b></a></li>
                 <li><a routerLink="/cambiopassword"><b>Account</b></a></li>
-                <li><a routerLink="/login"><b>ESCI</b></a></li>
+                <li><a (click)="logout()" routerLink="/login"><b>Logout</b></a></li>
             </ul>
         </div>
     </div>
