--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
 
             <ul class="nav navbar-nav">
                 <li class="sections-font">
-                    <a routerLink="/uninacorse" routerLinkActive="routerActive"><b>Stato Generale</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/uninacorse" routerLinkActive="routerActive"><b>Stato Gaaaaaaaaaaaaaaaaaaenerale</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font">
                     <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
