Minor bug fixes

--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -68,7 +68,7 @@
                 <label class="textClassSmall">&nbsp;&nbsp;&nbsp;Sensori Selezionati: {{searchControl.value?.length || 0}}</label>
               </div>
             </div>
-            <div #graph id="grafici" *ngIf="chartsListDisplayed"></div>
+            <div id="grafici" *ngIf="chartsListDisplayed"></div>
         </div>
         <div class="centerTrasparent">
           <div class="right" align="right">
