--- a/src/app/diagnostica/diagnostica.component.html
+++ b/src/app/diagnostica/diagnostica.component.html
@@ -14,7 +14,7 @@
 
     <app-nav-bar></app-nav-bar>
 
-    <div class="overlay" *ngIf="isLoading">
+    <div class="overlay" *ngIf="isLoading > 0">
       <div class="overlay__inner">
         <div class="overlay__content"><span class="spinner"></span></div>
       </div>
