--- a/src/app/notlogged/notlogged.component.css
+++ b/src/app/notlogged/notlogged.component.css
@@ -1,7 +1,7 @@
 
 html{
-    margin: 0; 
-    height: 100%; 
+    margin: 0;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -14,7 +14,7 @@ body{
     margin: 0px;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
-    height: 100%; 
+    height: 100%;
     overflow: hidden;
 }
 
@@ -61,3 +61,53 @@ body{
     border: 1px solid #5d8ffc;
     cursor: pointer;
 }
+
+/*Inizio loader*/
+
+.overlay {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.584);
+}
+
+.overlay__inner {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.overlay__content {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.spinner {
+  width: 75px;
+  height: 75px;
+  display: inline-block;
+  border-width: 2px;
+  border-color: rgba(255, 255, 255, 0.05);
+  border-top-color: #fff;
+  animation: spin 1s infinite linear;
+  border-radius: 100%;
+  border-style: solid;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+
+
+}
+
+/*Fine loader*/
