--- a/src/app/notlogged/notlogged.component.html
+++ b/src/app/notlogged/notlogged.component.html
@@ -1,6 +1,12 @@
 <html>
 
 <body>
+
+    <div class="overlay" *ngIf="isLoading">
+      <div class="overlay__inner">
+        <div class="overlay__content"><span class="spinner"></span></div>
+      </div>
+    </div>
     <div class="loggedin-div"  id="login_div">
         <object>
           <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
