--- a/src/app/gforce-section/gforce-section.component.css
+++ b/src/app/gforce-section/gforce-section.component.css
@@ -22,7 +22,7 @@
     position: absolute;
     display: block;
     padding: 0;
-    max-width: 96px;
+    width: 110px;
     overflow: hidden;
 
     border-width: 0;
@@ -32,8 +32,6 @@
 
     background-color: #2ecc71;
     color: #ecf0f1;
-
-    transition: background-color .3s;
 }
 
 
@@ -46,34 +44,37 @@
     padding: 5px 15px;
 }
 
-/*.btn:before {*/
-/*    content: "";*/
+.btn:hover, .btn:focus {
+  background-color: #2ecc71;
+  color: #ecf0f1;
+}
 
-/*    !*position: absolute;*!*/
-/*    top: 50%;*/
-/*    left: 50%;*/
+.btn:before {
+    /*position: absolute;*/
+    top: 50%;
+    left: 50%;
 
-/*    display: block;*/
-/*    width: 0;*/
-/*    padding-top: 0;*/
+    display: block;
+    width: 0;
+    padding-top: 0;
 
-/*    border-radius: 100%;*/
+    border-radius: 100%;
 
-/*    background-color: rgba(236, 240, 241, .3);*/
+    background-color: #2ecc71;
 
-/*    -webkit-transform: translate(-50%, -50%);*/
-/*    -moz-transform: translate(-50%, -50%);*/
-/*    -ms-transform: translate(-50%, -50%);*/
-/*    -o-transform: translate(-50%, -50%);*/
-/*    transform: translate(-50%, -50%);*/
-/*}*/
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
 
-/*.btn:active:before {*/
-/*    width: 120%;*/
-/*    padding-top: 120%;*/
+.btn:active:before {
+    /*width: 120%;*/
+    /*padding-top: 120%;*/
 
-/*    transition: width .2s ease-out, padding-top .2s ease-out;*/
-/*}*/
+    /*transition: width .2s ease-out, padding-top .2s ease-out;*/
+}
 
 .spanBar{
     font-size: 30px;
