--- a/src/app/logged/logged.component.html
+++ b/src/app/logged/logged.component.html
@@ -8,11 +8,11 @@
               <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
             </object>
           <h3 class="loginHeader">Bentornato</h3>
-            <button class="myButton myHover" mat-raised-button color="primary" routerLink="../uninacorse">Stato Generale</button>
+            <button class="myButton myHover" mat-raised-button color="primary" routerLink="../statogenerale">Stato Generale</button>
             <button class="myButton myHover" mat-raised-button color="primary" routerLink="../storico">Storico</button>
             <button class="myButton myHover" mat-raised-button color="primary" routerLink="../cambiopassword">Account</button>
             <button class="myButton myHover" mat-raised-button color="primary" (click)="logout()" >Logout</button>
-         
+
           </div>
 
     </body>
