--- a/src/app/stato-generale/stato-generale.component.html
+++ b/src/app/stato-generale/stato-generale.component.html
@@ -1,94 +1,55 @@
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<html>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+  integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <script src="https://www.openlayers.org/api/OpenLayers.js"></script>
+  <script src="../../assets/js/OpenLayers.js"></script>
+  <body style="background-color: #65717e">
+    <article class="index-gallery">
+        <app-nav-bar></app-nav-bar>
+        <div class="container-fluid">
 
-
-
-<script src="https://kit.fontawesome.com/f6b29a4c68.js" crossorigin="anonymous"></script>
-
-<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-database.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-storage.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
-
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/highcharts-more.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-
-
-<script src="https://www.openlayers.org/api/OpenLayers.js"></script>
-<script src="../../assets/js/OpenLayers.js"></script>
-
-<article class="index-gallery">
-
-    <div class="container-fluid">
-
-        <!--<div class="row">
-            <app-map-section></app-map-section>
-
-            <app-speedometer-section></app-speedometer-section>
-
-            <app-new-battery></app-new-battery>
-
+            <div class="row">
+                <div class="col-sm">
+                    <app-map-section></app-map-section>
+                </div>
+                <div class="col-sm-4">
+                    <app-speedometer-section></app-speedometer-section>
+                </div>
+                <div class="col-sm-4">
+                    <app-new-battery></app-new-battery>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <app-spie-controllo></app-spie-controllo>
+                </div>
+                <div class="col-sm-4">
+                    <app-rotazione-volante></app-rotazione-volante>
+                </div>
+                <div class="col-sm">
+                    <app-visionemacchina></app-visionemacchina>
+                </div>
+            </div>
 
         </div>
 
-        <div class="row text-center">
-            <app-rotazione-volante></app-rotazione-volante>
 
-            <app-spie-controllo></app-spie-controllo>
+    </article>
+  </body>
+  <script src="https://www.openlayers.org/api/OpenLayers.js"></script>
+  <script src="../../assets/js/OpenLayers.js"></script>
 
-            <app-visionemacchina></app-visionemacchina>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-        </div>-->
-
-        <div class="row">
-            <div class="col-sm">
-                <app-map-section></app-map-section>
-            </div>
-            <div class="col-sm-4">
-                <app-speedometer-section></app-speedometer-section>
-            </div>
-            <div class="col-sm-4">
-                <app-new-battery></app-new-battery>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <app-spie-controllo></app-spie-controllo>
-            </div>
-            <div class="col-sm-4">
-                <app-rotazione-volante></app-rotazione-volante>
-            </div>
-            <div class="col-sm">
-                <app-visionemacchina></app-visionemacchina>
-            </div>
-        </div>
-
-    </div>
-
-
-</article>
-
-<script src="https://www.openlayers.org/api/OpenLayers.js"></script>
-<script src="../../assets/js/OpenLayers.js"></script>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"></script>
+</html>
