--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
     <a class="navbar-brand">
-        <img src="/assets/img/logo.svg" width="30" height="30" class="navbar-header" alt="">
+        <img src="/assets/img/logo.svg" width="30" height="30" class="navbar-header" alt="" style="margin-top: -6px; margin-right: 6px">
         <strong class="banner-font">Unina Corse</strong>
     </a>
     <div class="container-fluid">
